--- a/index.html
+++ b/index.html
@@ -7,15 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js" type="text/javascript"></script>
-    <script src="js/script.js" defer></script>
+    <script src="script.js" defer></script>
     <title>PHP Aiax Dischi</title>
 </head>
 
 <body>
     <div id="app">
-        {{test}}
+
+        <header>
+            {{test}}
+        </header>
+
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div v-for="(disc, i) in discs" :key="i" class="text-center">
+                        <img :src="disc.poster" :alt="disc.author" class="w-100" />
+                        <h5>{{disc.title}}</h5>
+                        <p>{{disc.author}}</p>
+                        <p>{{disc.year}}</p>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+
 
     </div>
 
