--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
+        integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js" defer></script>
     <title>PHP Aiax Dischi</title>
 </head>
@@ -17,7 +19,7 @@
     <div id="app">
 
         <header>
-            {{test}}
+            {{discs}}
         </header>
 
         <main>
@@ -25,6 +27,7 @@
                 <div class="row">
                     <div v-for="(disc, i) in discs" :key="i" class="text-center">
                         <img :src="disc.poster" :alt="disc.author" class="w-100" />
+
                         <h5>{{disc.title}}</h5>
                         <p>{{disc.author}}</p>
                         <p>{{disc.year}}</p>
