--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
         integrity="sha512-odNmoc1XJy5x1TMVMdC7EMs3IVdItLPlCeL5vSUPN2llYKMJ2eByTTAIiiuqLg+GdNr9hF6z81p27DArRFKT7A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js" defer></script>
+
     <title>PHP Aiax Dischi</title>
 </head>
 
@@ -19,15 +22,16 @@
     <div id="app">
 
         <header>
-            {{discs}}
+            <!-- {{test}} -->
         </header>
 
         <main>
             <div class="container">
+                {{dischi}}
                 <div class="row">
-                    <div v-for="(disc, i) in discs" :key="i" class="text-center">
-                        <img :src="disc.poster" :alt="disc.author" class="w-100" />
+                    <div v-for="(disc, i) in dischi" :key="i" class="col-12 col-md-3 d-flex flex-column text-center">
 
+                        <img :src="disc.poster" :alt="disc.title" class="w-100" />
                         <h5>{{disc.title}}</h5>
                         <p>{{disc.author}}</p>
                         <p>{{disc.year}}</p>
@@ -42,8 +46,8 @@
 
 
 
-
-
+    <!-- js -->
+    <script src="script.js"></script>
 </body>
 
 </html>
