--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,8 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- css -->
+    <link rel="stylesheet" href="style.css">
     <!-- vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <!-- axios -->
@@ -22,16 +24,17 @@
     <div id="app">
 
         <header>
-            <!-- {{test}} -->
+            <img src="img/spotify-logo.png" alt="logo">
         </header>
 
         <main>
             <div class="container">
-                {{dischi}}
-                <div class="row">
-                    <div v-for="(disc, i) in dischi" :key="i" class="col-12 col-md-3 d-flex flex-column text-center">
 
-                        <img :src="disc.poster" :alt="disc.title" class="w-100" />
+                <div class="row justify-content-between">
+                    <div v-for="(disc, i) in dischi" :key="i"
+                        class="col-12 col-md-2 ff-card d-flex flex-column text-center align-items-center">
+
+                        <img :src="disc.poster" :alt="disc.title" />
                         <h5>{{disc.title}}</h5>
                         <p>{{disc.author}}</p>
                         <p>{{disc.year}}</p>
